# DICOM-MCP

./: .gitignore  README.md  main.py  pyproject.toml  s1_test_function.py  s3_config_json.txt  test_monai_tcia.py
src/dicom_mcp/: dicom_tools.py  server.py
