[project]
name = "dicom-mcp"
version = "0.1.0"
description = "MCP to work with DICOM images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.6.0",]
[[project.authors]]
name = "Shaun Porwal"
email = "shaun.porwal@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
dicom-mcp = "dicom_mcp:main"
